# cortex-fabric

./: .env.example  AGENTS.md  CLAUDE.md  Makefile  README.md  cortex.yaml  hive-mind.yaml  opencg.yaml  package.json  pnpm-lock.yaml  pyproject.toml
services/ingestion/: Dockerfile  pyproject.toml
services/ingestion/src/cortex_ingestion/: __init__.py  cli.py  graph_writer.py  pipeline_runner.py  reextract.py  runs.py  server.py  text_graph_writer.py
services/ingestion/src/cortex_ingestion/connectors/: git.py
services/ingestion/src/hive_mind_ingestion/: graph_writer.py  pipeline_runner.py  text_graph_writer.py
services/ingestion/src/opencg_ingestion/: __init__.py  chunking.py  cli.py  graph_writer.py  pipeline_runner.py  reextract.py  runs.py  server.py  text_graph_writer.py
services/ingestion/src/opencg_ingestion/connectors/: git.py
services/ingestion/tests/: test_chunking.py  test_cli.py  test_code_path_materialisation.py  test_git_connector.py  test_graph_writer.py  test_pipeline_runner.py  test_reextract.py  test_runs.py  test_server.py  test_text_graph_writer.py
services/pipeline/: Dockerfile  pyproject.toml
services/pipeline/src/cortex_pipeline/: __init__.py  admin_routes.py  app.py  providers.py  util.py
services/pipeline/src/cortex_pipeline/graph/: age.py  extract.py  routes.py
services/pipeline/src/cortex_pipeline/stages/: assemble.py  hybrid_retrieval.py  identity.py
services/pipeline/src/cortex_pipeline/storage/: audit.py  catalog.py  graph.py  vector.py
services/pipeline/src/hive_mind_pipeline/: admin_routes.py  app.py
services/pipeline/src/hive_mind_pipeline/graph/: __init__.py  age.py  extract.py  routes.py
services/pipeline/src/hive_mind_pipeline/storage/: audit.py  catalog.py  graph.py
services/pipeline/src/opencg_pipeline/: __init__.py  admin_routes.py  app.py
services/pipeline/src/opencg_pipeline/graph/: age.py  extract.py  routes.py
services/pipeline/src/opencg_pipeline/stages/: assemble.py  hybrid_retrieval.py  (+1 more)
services/pipeline/tests/: test_admin_routes.py  test_assemble.py  test_audit.py  test_catalog.py  test_graph_routes.py  test_graph_store.py  test_ollama_chat.py  test_providers.py  test_rrf.py  test_smoke_chat_stub.py  test_text_extractor.py  test_util.py  test_vector_search_all.py
(+146 files in other folders)
