[project]
name = "cortex-pipeline"
version = "0.0.0"
description = "Retrieval pipeline service."
requires-python = ">=3.12"
dependencies = [
  "cortex-shared",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.27",
  "asyncpg>=0.30",
  "qdrant-client>=1.12,<1.13",
  "pydantic>=2.9",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cortex_pipeline"]
